# dabes-py-ddd-example

./: .gitignore  README.md  pyproject.toml  pytest.ini  shell.nix
dabes_py_ddd_example/domain/common/: constraints.py  errors.py  type_factory.py  types.py
dabes_py_ddd_example/domain/order_taking/: factories.py  types.py
ddd/: entity.py  value_object.py
domain/: abstract_model.py
domain/common/: constraints.py  types.py
scratch/: main.py
tests/common/: test_factories.py  test_types.py
