[tool.poetry]
name = "dabes-py-ddd-example"
version = "0.1.0"
description = ""
authors = ["expelledboy <Anthony Jackson> <102334+expelledboy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
